--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Labrada:ital@0;1&family=Noto+Sans+TC&family=Raleway:ital,wght@1,700;1,900&display=swap');
 #side{
     position: fixed;
     width: 10%;
