--- a/styles/main.css
+++ b/styles/main.css
@@ -29,6 +29,10 @@
     cursor: pointer;
     margin-top: 4px;
     margin-bottom: 4px;
+    font-size: 18px;
+    width: 100%;
+    height: 40px;
+    text-align: center;
 }
 .sideb:hover{
     border: 0;
