--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@
     cursor: pointer;
     margin-top: 4px;
     margin-bottom: 4px;
-    font-size: 18px;
+    font-size: 120%;
     width: 100%;
     height: 40px;
     text-align: center;
