--- a/styles/index.css
+++ b/styles/index.css
@@ -25,35 +25,55 @@ body::-webkit-scrollbar-track {
 }
 /*header*/
 header{
-    height: 9vh;
-    padding: 0 1.5vw;
-    position: sticky;
-    top: 0;
-    z-index: 9999;
+    display: flex;
+    height: fit-content;
+    padding: 0;
+    height: 100vh;
     background-color: #81D8D0;
     overflow: hidden;
-}
-#shead{
-    width: 50vw;
-    display: inline-flex;
-    height: inherit;
+    background-image: url(/pictures/homepage_bg.jpg);
+    background-size: cover;
+    background-position: bottom;
+    flex-direction: column;
     align-items: center;
-    margin: 0%;
 }
-#shead img{
+#hometitle{
+    display: inline-flex;
+    height: 48%;
+    margin-bottom: 2%;
+    font-size: 125px;
+    overflow: hidden;
+    align-items:end;
     justify-content: center;
-    height: 90%; 
+    color: #ffffff;
+}
+#down{
+    display: inline-flex;
+    font-size: 100px;
+    height: 25%;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+}
+#down p{
+    font-size: 100px;
+    overflow: hidden;
+    color: #ffffff;
+    transition: 0.3s;
+}
+#down p:hover{
+    color: #46ada3;
 }
 #link-button{
-    float: right;
-    height: inherit;
+    height: 25%;
     margin: 0%;
     padding: 0%;
 }
 .navb{
     display: inline-flex;
-    border: 0;
-    color: #2d726b;
+    border: solid 2px #ffffff;
+    border-radius: 10px;
+    color: #ffffff;
     text-decoration: none;
     cursor: pointer;
     font-size: 20px;
@@ -63,9 +83,10 @@ header{
     align-items: center;
     padding: 0 0.5vw;
     transition: 0.3s;
+    margin: 0 0.5vw;
 }
 .navb:hover{
-    border: 0;
+    border: solid 2px #2d726b;
     color: #ffffff;
     background-color: #2d726b;
 }
@@ -73,17 +94,6 @@ header{
 main{
     float: left;
     width: 100vw;
-    overflow: hidden;
-}
-.pagetitle{
-    display: flex;
-    height: 15vh;
-    padding: 0 0.5vh;
-    background-color: #46ada3;
-    font-size: 50px;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 25px;
     overflow: hidden;
 }
 .pagesubtitle{
@@ -104,6 +114,32 @@ main{
     padding: 0 1vw;
     margin-bottom: 40px;
     overflow: hidden;
+}
+#main{
+    height: 25px;
+}
+#newpostblock{
+    width: 70%;
+    border-collapse:collapse;
+}
+#newpostblock tr{
+    height: 60px;
+    border-bottom: solid 5px #2d726b;
+}
+#newpostblock .time{
+    width: 20%;
+    text-align: center;
+    font-size: 30px;
+}
+#newpostblock .posttitle{
+    width: 80%;
+    font-size: 30px;
+}
+.countdown{
+    width: 50vw;
+    float: left;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 /*footer*/
 footer{
@@ -129,15 +165,12 @@ footer{
 .inline-block{
     display: inline-block;
 }
-.zhw{
+.zhwb{
     font-family: 'Noto Sans TC', sans-serif;
 }
-.enw1{
-    font-family: 'Raleway', sans-serif;
+.zhw{
+    font-family: 'Noto Sans TC:wght@400', sans-serif;
 }
-.enw2{
-    font-family: 'Labrada', serif;
-}
-.enw3{
+.enw{
     font-family: 'Righteous', cursive;
 }
