--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,7 @@ header{
     background-image: url(/pictures/homepage_bg.jpg);
     background-size: cover;
     background-position: bottom;
+    background-repeat: no-repeat;
     flex-direction: column;
     align-items: center;
 }
