--- a/styles/project.css
+++ b/styles/project.css
@@ -1,11 +1,9 @@
 .problock{
     float: left;
-    width: 97%;
+    width: 46%;
     height: 400px;
     background-color: rgba(255, 255, 255, 0.75);
-    margin-left: 1%;
-    margin-right: 2%;
-    margin-bottom: 2%;
+    margin: 1% 2%;
     border-radius: 15px;
     cursor:pointer;
     overflow: hidden;
@@ -22,26 +20,34 @@
 }
 .proimage{
     float: left;
-    width: 50%;
-    height: 360px;
-    margin: 20px;
+    width: 55%;
+    height: 70%;
+    margin: 1%;
+    margin-left: 1.5%;
+    margin-right: 0.5%;
     text-align: center;
     overflow: hidden;
 }
 .proimage img{
+    width: 100%;
     height: 100%;
+    object-fit: contain;
+    vertical-align: middle;
 }
 .protitle{
     float: left;
-    width: 46%;
-    height: 30%;
-    margin-top: 20px;
+    width: 100%;
+    height: 20%;
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 2px;
+    text-align: center;
     overflow: hidden;
 }
 .prozhtitle{
     font-size: 35px;
     margin: 0%;
-    margin-bottom: 1%;
 }
 .proentitle{
     font-size: 25px;
@@ -49,10 +55,11 @@
 }
 .procontent{
     float: left;
-    width: 46%;
+    width: 41%;
     height: 70%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 1%;
+    margin-left: 0.5%;
+    margin-right: 1.5%;
     overflow: hidden;
 }
 .probrief{
