--- a/styles/index.css
+++ b/styles/index.css
@@ -49,7 +49,7 @@ header{
     color: #ffffff;
 }
 #in-link-button{
-    height: 25%;
+    height: 15%;
     margin: 0%;
     padding: 0%;
     overflow: hidden;
@@ -63,7 +63,8 @@ header{
     cursor: pointer;
     font-size: 20px;
     width: 120px;
-    height: inherit;
+    height: 80%;
+    max-height: 65px;
     justify-content: center;
     align-items: center;
     padding: 0 0.5vw;
@@ -77,7 +78,7 @@ header{
 }
 #out-link-button{
     height: 10%;
-    margin: 0%;
+    margin: 2% 0%;
     padding: 0%;
     overflow: hidden;
 }
@@ -98,11 +99,13 @@ header{
 }
 #down{
     display: inline-flex;
-    font-size: 100px;
-    height: 25%;
+    font-size: 80px;
+    height: 7%;
     overflow: hidden;
     align-items: center;
     justify-content: center;
+    position: absolute;
+    bottom: 30px;
     animation-name: movedown;
     animation-duration: 0.5s;
     animation-direction: alternate;
@@ -110,7 +113,7 @@ header{
     animation-timing-function: ease-in;
 }
 #down p{
-    font-size: 100px;
+    font-size: 80px;
     overflow: hidden;
     color: #ffffff;
     transition: 0.3s;
@@ -120,10 +123,10 @@ header{
 }
 @keyframes movedown{
     from{
-        margin-top: -15px;
+        bottom: 30px;
     }
     to{
-        margin-top: 10px;
+        bottom: 10px;
     }
 }
 /*main content*/
