--- a/styles/index.css
+++ b/styles/index.css
@@ -42,7 +42,7 @@ header{
     display: inline-flex;
     height: 48vh;
     margin-bottom: 2%;
-    font-size: 20vh;
+    font-size: 125px;
     overflow: hidden;
     align-items:end;
     justify-content: center;
