--- a/styles/post.css
+++ b/styles/post.css
@@ -28,7 +28,7 @@
     min-height: 120px;
     background-color: rgba(255, 255, 255, 0.75);
     margin: 1% 2%;
-    padding: 0% 2%;
+    padding: 2%;
     border-radius: 15px;
     overflow: hidden;
     color: #000000;
