--- a/styles/about.css
+++ b/styles/about.css
@@ -1,10 +1,60 @@
-/*project part*/
-.problock{
-    float: left;
-    width: 46%;
-    height: 450px;
+/*index page*/
+/*about part*/
+#introblock{
+    width: 92%;
+    min-height: 120px;
     background-color: rgba(255, 255, 255, 0.75);
     margin: 1% 2%;
+    padding: 2%;
+    border-radius: 15px;
+    overflow: hidden;
+    color: #000000;
+    box-shadow: 0 10px 10px -5px;
+    font-size: 20px;
+}
+
+/*countdown part*/
+.countdown{
+    width: 50vw;
+    float: left;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/*website part*/
+#websiteblock{
+    width: 92%;
+    min-height: 120px;
+    background-color: rgba(255, 255, 255, 0.75);
+    margin: 2%;
+    padding: 2%;
+    border-radius: 15px;
+    overflow: hidden;
+    color: #000000;
+    box-shadow: 0 10px 10px -5px;
+    font-size: 20px;
+}
+
+/*project page*/
+/*project part*/
+#back{
+    overflow: hidden;
+    font-size: 50px;
+}
+#back a{
+    color: #000000;
+}
+#back a:hover{
+    color: #999999;
+}
+.problock{
+    float: left;
+    width: 92%;
+    height: 400px;
+    background-color: rgba(255, 255, 255, 0.75);
+    margin: 1.3% 2%;
+    padding: 2%;
+    display: flex;
     border-radius: 15px;
     cursor:pointer;
     overflow: hidden;
@@ -20,13 +70,7 @@
     box-shadow: 0 10px 10px -5px;
 }
 .proimage{
-    float: left;
-    width: 55%;
-    height: 70%;
-    margin: 1%;
-    margin-left: 1.5%;
-    margin-right: 0.5%;
-    text-align: center;
+    width: 50%;
     overflow: hidden;
 }
 .proimage img{
@@ -35,38 +79,41 @@
     object-fit: contain;
     vertical-align: middle;
 }
-.protitle{
+.procontent{
     float: left;
-    width: 100%;
-    height: 20%;
-    margin-top: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 2px;
-    text-align: center;
+    width: 49%;
+    height: 70%;
+    margin: 1% 0 1% 1%;
     overflow: hidden;
 }
+.protitle{
+    margin-bottom: 3%;
+}
 .prozhtitle{
-    font-size: 35px;
+    font-size: 30px;
     margin: 0%;
 }
 .proentitle{
-    font-size: 25px;
+    font-size: 30px;
     margin: 0%;
 }
-.procontent{
-    float: left;
-    width: 41%;
-    height: 70%;
-    margin: 1%;
-    margin-left: 0.5%;
-    margin-right: 1.5%;
-    overflow: hidden;
-}
 .probrief{
-    font-size: 18px;
+    font-size: 20px;
 }
 
+/*site page*/
+#motiveblock{
+    width: 92%;
+    min-height: 120px;
+    background-color: rgba(255, 255, 255, 0.75);
+    margin: 1% 2%;
+    padding: 2%;
+    border-radius: 15px;
+    overflow: hidden;
+    color: #000000;
+    box-shadow: 0 10px 10px -5px;
+    font-size: 20px;
+}
 /*webtime part*/
 #webtime{
     width: 90%;
@@ -77,16 +124,18 @@
     border-bottom: solid 5px #2d726b;
 }
 #webtime .time{
-    width: 13%;
+    width: 130px;
     text-align: center;
+    padding: 0 0 0 30px;
     font-size: 20px;
 }
 #webtime .tag{
-    width: 10%;
+    width: 90px;
     text-align: center;
+    padding: 0 5px;
     font-size: 20px;
 }
 #webtime .event{
-    width: 77%;
+    width: calc(100%-300px);
     font-size: 20px;
 }
