--- a/styles/index.css
+++ b/styles/index.css
@@ -28,13 +28,9 @@ header{
     display: flex;
     height: fit-content;
     padding: 0;
-    height: 100vh;
-    background-color: #81D8D0;
+    height: 90vh;
+    /*background-color: #81D8D0;*/
     overflow: hidden;
-    background-image: url(/pictures/homepage_bg.jpg);
-    background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat;
     flex-direction: column;
     align-items: center;
 }
@@ -43,12 +39,19 @@ header{
     height: 48vh;
     margin-bottom: 2%;
     font-size: 125px;
+    text-align: center;
     overflow: hidden;
     align-items:end;
     justify-content: center;
     color: #ffffff;
 }
 #in-link-button{
+    height: 15vh;
+    margin: 0%;
+    padding: 0%;
+    overflow: hidden;
+}
+#in-link-button-en{
     height: 15vh;
     margin: 0%;
     padding: 0%;
@@ -61,7 +64,7 @@ header{
     color: #ffffff;
     text-decoration: none;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 23px;
     width: 120px;
     height: 80%;
     max-height: 65px;
@@ -83,6 +86,8 @@ header{
     overflow: hidden;
 }
 .outb{
+    background-color: transparent;
+    border: 0;
     display: inline-flex;
     align-items: center;
     justify-content: space-around;
@@ -129,7 +134,7 @@ header{
         bottom: 10px;
     }
 }
-/*main content*/
+/*main content
 main{
     float: left;
     width: 100vw;
@@ -174,12 +179,7 @@ main{
     width: 80%;
     font-size: 20px;
 }
-.countdown{
-    width: 50vw;
-    float: left;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
+*/
 /*footer*/
 footer{
     width: 100vw;
@@ -189,7 +189,7 @@ footer{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #46ada3;
+    /*background-color: #46ada3;*/
     overflow: hidden;
 }
 #siterights{
@@ -205,11 +205,15 @@ footer{
     display: inline-block;
 }
 .zhwb{
+    font-weight: bold;
     font-family: 'Noto Sans TC', sans-serif;
 }
 .zhw{
     font-family: 'Noto Sans TC:wght@400', sans-serif;
 }
-.enw{
+.enwt{
     font-family: 'Righteous', cursive;
+}
+.enw{
+    font-family: 'Raleway', sans-serif;
 }
