--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,7 @@ body::-webkit-scrollbar-track {
 }
 /*header*/
 header{
-    height: 9vh;
+    height: 8vh;
     padding: 0 1.5vw;
     position: sticky;
     top: 0;
@@ -37,7 +37,7 @@ header{
     display: inline-flex;
     height: inherit;
     align-items: center;
-    margin: 0%;
+    margin: 0;
 }
 #shead img{
     justify-content: center;
@@ -46,8 +46,8 @@ header{
 nav{
     float: right;
     height: inherit;
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
 }
 .navb{
     display: inline-flex;
@@ -55,8 +55,8 @@ nav{
     color: #2d726b;
     text-decoration: none;
     cursor: pointer;
-    font-size: 20px;
-    width: 120px;
+    font-size: 23px;
+    width: 100px;
     height: inherit;
     justify-content: center;
     align-items: center;
@@ -133,6 +133,10 @@ footer{
 /*other*/
 .inline-block{
     display: inline-block;
+}
+.zhwb{
+    font-weight: bold;
+    font-family: 'Noto Sans TC', sans-serif;
 }
 .zhw{
     font-family: 'Noto Sans TC', sans-serif;
