--- a/styles/about.css
+++ b/styles/about.css
@@ -12,11 +12,89 @@
     box-shadow: 0 10px 10px -5px;
     font-size: 20px;
 }
+#introblock h2{
+    text-align: center;
+}
+#introblock h3{
+    text-align: left;
+    margin: 1%;
+}
+.items{
+    display: grid;
+    gap: 7px;
+    margin: 1%;
+}
+.item{
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em;
+    word-spacing: normal;
+    border: 2px solid #2d726b;
+    text-decoration: none;
+    color: initial;
+    transition: 0.5s;
+}
+.item:hover{
+    background-color: #46ada3;
+}
+.item img{
+    width: 40%;
+    margin-bottom: 3%;
+}
+.title{
+    font-size: large;
+    text-align: center;
+}
+.description{
+    font-size: medium;
+}
+#hidden{
+    display: none;
+}
+#more{
+    display: grid;
+    margin-top: 3%;
+    background-color: #2d726b;
+    transition: 0.1s;
+}
+#more .item{
+    background-color: inherit;
+    color: #fff;
+    transition: 0.1s;
+}
+#more:hover{
+    background-color: inherit;
+    cursor: pointer;
+}
+#more:hover .item{
+    background-color: inherit;
+    color: #000000;
+}
+#less{
+    display: none;
+    margin-top: 3%;
+    background-color: #2d726b;
+    transition: 0.1s;
+}
+#less .item{
+    background-color: inherit;
+    color: #fff;
+    transition: 0.1s;
+}
+#less:hover{
+    background-color: inherit;
+    cursor: pointer;
+}
+#less:hover .item{
+    background-color: inherit;
+    color: #000000;
+}
 
 /*countdown part*/
 .countdown{
-    width: 50vw;
-    float: left;
+    width: 100%;
     margin-top: 30px;
     margin-bottom: 30px;
 }
@@ -47,14 +125,21 @@
 #back a:hover{
     color: #999999;
 }
+#projectc{
+    display: grid;
+    grid-template-columns:repeat(2,1fr);
+    grid-auto-rows: minmax(400px,100%);
+}
 .problock{
-    float: left;
-    width: 92%;
-    height: 400px;
+    width: 82%;
+    height: 80%;
     background-color: rgba(255, 255, 255, 0.75);
     margin: 1.3% 2%;
-    padding: 2%;
-    display: flex;
+    padding: 4%;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border-radius: 15px;
     cursor:pointer;
     overflow: hidden;
@@ -72,30 +157,11 @@
 .proimage{
     width: 50%;
     overflow: hidden;
-}
-.proimage img{
-    width: 100%;
-    height: 100%;
     object-fit: contain;
-    vertical-align: middle;
-}
-.procontent{
-    float: left;
-    width: 49%;
-    height: 70%;
-    margin: 1% 0 1% 1%;
-    overflow: hidden;
 }
 .protitle{
-    margin-bottom: 3%;
-}
-.prozhtitle{
     font-size: 30px;
-    margin: 0%;
-}
-.proentitle{
-    font-size: 30px;
-    margin: 0%;
+    text-align: center;
 }
 .probrief{
     font-size: 20px;
@@ -116,7 +182,7 @@
 }
 /*webtime part*/
 #webtime{
-    width: 90%;
+    width: 100%;
     border-collapse:collapse;
 }
 #webtime tr{
@@ -138,4 +204,103 @@
 #webtime .event{
     width: calc(100%-300px);
     font-size: 20px;
+}
+
+/*contact part*/
+form{
+    width: 92%;
+    margin: 1% 2%;
+    padding: 2%;
+    border-radius: 15px;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    /*background-color: rgba(255, 255, 255, 0.75);*/
+    overflow: hidden;
+    color: #000000;
+    /*box-shadow: 0 10px 10px -5px;*/
+}
+li{
+    display: block;
+    align-items: stretch;
+    margin-bottom: 15px;
+}
+.label{
+    width: auto;
+    height: auto;  
+}
+.text{
+    width: 100%;
+    height: 40px;
+    border: 0;
+    border-bottom: solid 3px #46ada3;
+    background-color: inherit;
+    outline: none;
+    font-size: 18px;
+}
+.text::-webkit-input-placeholder{
+    font-family: sans-serif;
+    font-size: 18px;
+}
+.option{
+    opacity: 0;
+    width: auto;
+}
+.optionw{
+    display: inline-block;
+    border: solid 1px #46ada3;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    padding: 1%;
+}
+.option:hover+.optionw{
+    background-color: #46ada3;
+}
+.option:checked+.optionw{
+    background-color: #46ada3;
+    cursor: default;
+}
+textarea{
+    resize: none;
+    width: 100%;
+    min-height: 100px;
+    border: 0;
+    border-bottom: solid 3px #46ada3;
+    background-color: inherit;
+    outline: none;
+    font-size: 18px;
+}
+textarea::-webkit-input-placeholder{
+    font-family: sans-serif;
+    font-size: 18px;
+}
+#verify{
+    display: flex;
+    justify-content: center;
+}
+.g-recaptcha{
+    margin: 10px 0;
+    margin-left: 30px; 
+}
+#buttonblock{
+    display: flex;
+    justify-content: center;
+}
+button{
+    margin: 10px;
+    border: solid 3px #46ada3;
+    border-radius: 20px;
+    background-color: inherit;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    transition: 0.3s;
+}
+button:hover{
+    background-color: #46ada3;
+    cursor: pointer;
+}
+button:active{
+    transform: scale(0.9);
 }
