--- a/styles/index.css
+++ b/styles/index.css
@@ -38,7 +38,7 @@ header{
     display: inline-flex;
     height: 48vh;
     margin-bottom: 2%;
-    font-size: 125px;
+    font-size: min(10vw,20vh,125px);
     text-align: center;
     overflow: hidden;
     align-items:end;
@@ -64,10 +64,9 @@ header{
     color: #ffffff;
     text-decoration: none;
     cursor: pointer;
-    font-size: 23px;
-    width: 120px;
-    height: 80%;
-    max-height: 65px;
+    font-size: min(23px,max(100%,3vh));
+    width: min(120px,30vw);
+    height: min(65px,max(60%,5vh));
     justify-content: center;
     align-items: center;
     padding: 0 0.5vw;
@@ -86,6 +85,8 @@ header{
     overflow: hidden;
 }
 .outb{
+    max-width: 10vw;
+    max-height: 10vh;
     background-color: transparent;
     border: 0;
     display: inline-flex;
@@ -97,6 +98,7 @@ header{
     transition: 0.3s;
     text-decoration: none;
     margin: 0 0.5vw;
+    overflow: visible;
 }
 .outb:hover{
     fill: #46ada3;
@@ -196,7 +198,7 @@ footer{
     color: #ffffff;
     margin: 1px;
     text-align: center;
-    font-size: 20px;
+    font-size: min(20px,5vw,10vh);
     display: inline;
 }
 
