--- a/styles/about.css
+++ b/styles/about.css
@@ -1,5 +1,5 @@
 /*index page*/
-/*about part*/
+/*profile part*/
 #introblock{
     width: 92%;
     min-height: 120px;
@@ -91,8 +91,6 @@
     background-color: inherit;
     color: #000000;
 }
-
-/*countdown part*/
 .countdown{
     width: 100%;
     margin-top: 30px;
@@ -113,73 +111,6 @@
     font-size: 20px;
 }
 
-/*project page*/
-/*project part*/
-#back{
-    overflow: hidden;
-    font-size: 50px;
-}
-#back a{
-    color: #000000;
-}
-#back a:hover{
-    color: #999999;
-}
-#projectc{
-    display: grid;
-    grid-template-columns:repeat(2,1fr);
-    grid-auto-rows: minmax(400px,100%);
-}
-.problock{
-    width: 82%;
-    height: 80%;
-    background-color: rgba(255, 255, 255, 0.75);
-    margin: 1.3% 2%;
-    padding: 4%;
-    display: inline-flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
-    cursor:pointer;
-    overflow: hidden;
-    transform:scale(1,1);
-    transition: all 0.5s ease-out;
-    color: #000000;
-    box-shadow: 0 10px 10px -5px;
-}
-.problock:hover{
-    transform:scale(1.03,1.03);
-    background-color: rgba(255, 255, 255, 0.5);
-    color: #777777;
-    box-shadow: 0 10px 10px -5px;
-}
-.proimage{
-    width: 50%;
-    overflow: hidden;
-    object-fit: contain;
-}
-.protitle{
-    font-size: 30px;
-    text-align: center;
-}
-.probrief{
-    font-size: 20px;
-}
-
-/*site page*/
-#motiveblock{
-    width: 92%;
-    min-height: 120px;
-    background-color: rgba(255, 255, 255, 0.75);
-    margin: 1% 2%;
-    padding: 2%;
-    border-radius: 15px;
-    overflow: hidden;
-    color: #000000;
-    box-shadow: 0 10px 10px -5px;
-    font-size: 20px;
-}
 /*webtime part*/
 #webtime{
     width: 100%;
@@ -190,19 +121,14 @@
     border-bottom: solid 5px #2d726b;
 }
 #webtime .time{
-    width: 130px;
+    width: 15%;
     text-align: center;
-    padding: 0 0 0 30px;
-    font-size: 20px;
-}
-#webtime .tag{
-    width: 90px;
-    text-align: center;
-    padding: 0 5px;
+    padding: 0 0 0 1%;
     font-size: 20px;
 }
 #webtime .event{
-    width: calc(100%-300px);
+    width: 84%;
+    padding: 0 1% 0 0;
     font-size: 20px;
 }
 
@@ -215,10 +141,8 @@ form{
     font-size: 20px;
     display: flex;
     flex-direction: column;
-    /*background-color: rgba(255, 255, 255, 0.75);*/
     overflow: hidden;
     color: #000000;
-    /*box-shadow: 0 10px 10px -5px;*/
 }
 li{
     display: block;
@@ -303,4 +227,58 @@ button:hover{
 }
 button:active{
     transform: scale(0.9);
+}
+
+/*project page*/
+/*project part*/
+#back{
+    overflow: hidden;
+    font-size: 50px;
+}
+#back a{
+    color: #000000;
+}
+#back a:hover{
+    color: #999999;
+}
+#projectc{
+    display: grid;
+    grid-template-columns:repeat(2,1fr);
+    grid-auto-rows: minmax(400px,100%);
+}
+.problock{
+    width: 82%;
+    height: 80%;
+    background-color: rgba(255, 255, 255, 0.75);
+    margin: 1.3% 2%;
+    padding: 4%;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    cursor:pointer;
+    overflow: hidden;
+    transform:scale(1,1);
+    transition: all 0.5s ease-out;
+    color: #000000;
+    box-shadow: 0 10px 10px -5px;
+}
+.problock:hover{
+    transform:scale(1.03,1.03);
+    background-color: rgba(255, 255, 255, 0.5);
+    color: #777777;
+    box-shadow: 0 10px 10px -5px;
+}
+.proimage{
+    width: 50%;
+    overflow: hidden;
+    object-fit: contain;
+}
+.protitle{
+    font-size: 30px;
+    text-align: center;
+}
+.probrief{
+    font-size: 20px;
 }
