--- a/styles/about.css
+++ b/styles/about.css
@@ -1,28 +1,32 @@
 /*index page*/
 /*profile part*/
-#introblock{
-    width: 92%;
-    min-height: 120px;
-    background-color: rgba(255, 255, 255, 0.75);
-    margin: 1% 2%;
-    padding: 2%;
-    border-radius: 15px;
-    overflow: hidden;
-    color: #000000;
-    box-shadow: 0 10px 10px -5px;
-    font-size: 20px;
-}
-#introblock h2{
-    text-align: center;
-}
-#introblock h3{
-    text-align: left;
-    margin: 1%;
-}
 .items{
     display: grid;
     gap: 7px;
     margin: 1%;
+    grid-template-columns: repeat(4,1fr);
+}
+.smallitems{
+    display: grid;
+    gap: 7px;
+    margin: 1%;
+    grid-template-columns: repeat(6,1fr);
+}
+@media only screen and (max-width: 425px){
+    .items{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .smallitems{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media only screen and (min-width: 425px) and (max-width: 1024px){
+    .items{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .smallitems{
+        grid-template-columns: repeat(3,1fr);
+    }
 }
 .item{
     display: inline-flex;
@@ -35,101 +39,39 @@
     text-decoration: none;
     color: initial;
     transition: 0.5s;
+    height: fit-content;
 }
 .item:hover{
     background-color: #46ada3;
 }
 .item img{
-    width: 40%;
+    width: 100%;
     margin-bottom: 3%;
+    object-fit: cover;
 }
 .title{
-    font-size: large;
+    font-size: 25px;
     text-align: center;
 }
 .description{
-    font-size: medium;
-}
-#hidden{
-    display: none;
-}
-#more{
-    display: grid;
-    margin-top: 3%;
-    background-color: #2d726b;
-    transition: 0.1s;
-}
-#more .item{
-    background-color: inherit;
-    color: #fff;
-    transition: 0.1s;
-}
-#more:hover{
-    background-color: inherit;
-    cursor: pointer;
-}
-#more:hover .item{
-    background-color: inherit;
-    color: #000000;
-}
-#less{
-    display: none;
-    margin-top: 3%;
-    background-color: #2d726b;
-    transition: 0.1s;
-}
-#less .item{
-    background-color: inherit;
-    color: #fff;
-    transition: 0.1s;
-}
-#less:hover{
-    background-color: inherit;
-    cursor: pointer;
-}
-#less:hover .item{
-    background-color: inherit;
-    color: #000000;
-}
-.countdown{
-    width: 100%;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-/*website part*/
-#websiteblock{
-    width: 92%;
-    min-height: 120px;
-    background-color: rgba(255, 255, 255, 0.75);
-    margin: 2%;
-    padding: 2%;
-    border-radius: 15px;
-    overflow: hidden;
-    color: #000000;
-    box-shadow: 0 10px 10px -5px;
-    font-size: 20px;
-}
-
-/*webtime part*/
-#webtime{
-    width: 100%;
-    border-collapse:collapse;
-}
-#webtime tr{
-    height: 60px;
-    border-bottom: solid 5px #2d726b;
-}
-#webtime .time{
-    width: 15%;
     text-align: center;
-    padding: 0 0 0 1%;
     font-size: 20px;
 }
-#webtime .event{
-    width: 84%;
-    padding: 0 1% 0 0;
+#projectitems{
+    grid-template-columns: repeat(1,1fr);
+}
+details{
+    margin: 1%;
     font-size: 20px;
+}
+details img{
+    max-width: 100%;
+}
+details a{
+    text-decoration: none;
+}
+details li{
+    margin: 0;
 }
 
 /*contact part*/
@@ -144,14 +86,15 @@ form{
     overflow: hidden;
     color: #000000;
 }
-li{
+form li{
     display: block;
     align-items: stretch;
     margin-bottom: 15px;
 }
 .label{
     width: auto;
-    height: auto;  
+    height: auto;
+    font-size: 23px;
 }
 .text{
     width: 100%;
@@ -160,15 +103,20 @@ li{
     border-bottom: solid 3px #46ada3;
     background-color: inherit;
     outline: none;
-    font-size: 18px;
+    font-size: 20px;
 }
 .text::-webkit-input-placeholder{
     font-family: sans-serif;
-    font-size: 18px;
+    font-size: 20px;
 }
 .option{
     opacity: 0;
     width: auto;
+}
+@media only screen and (max-width: 768px){
+    .option{
+        display: block;
+    }
 }
 .optionw{
     display: inline-block;
@@ -193,11 +141,11 @@ textarea{
     border-bottom: solid 3px #46ada3;
     background-color: inherit;
     outline: none;
-    font-size: 18px;
+    font-size: 20px;
 }
 textarea::-webkit-input-placeholder{
     font-family: sans-serif;
-    font-size: 18px;
+    font-size: 20px;
 }
 #verify{
     display: flex;
@@ -231,24 +179,45 @@ button:active{
 
 /*project page*/
 /*project part*/
-#back{
-    overflow: hidden;
-    font-size: 50px;
-}
-#back a{
+#backdiv{
+    display: flex;
+    align-items: center;
     color: #000000;
+    text-decoration: none;
+    width: fit-content;
+    margin-left: 5vw;
 }
-#back a:hover{
+#backdiv span{
+    font-size: 25px;
+}
+#backdiv:hover{
     color: #999999;
 }
+#back{
+    overflow: hidden;
+}
+@media only screen and (max-width: 768px){
+    #backdiv{
+        display: none;
+    }
+}
 #projectc{
+    height: fit-content;
+    padding-bottom: 5%;
     display: grid;
     grid-template-columns:repeat(2,1fr);
-    grid-auto-rows: minmax(400px,100%);
+    gap: 15px;
+    background-color: inherit;
+    border-radius: 0px;
+    color: inherit;
+    box-shadow: 0 0 0 0;
+}
+@media only screen and (max-width: 1024px){
+    #projectc{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
 .problock{
-    width: 82%;
-    height: 80%;
     background-color: rgba(255, 255, 255, 0.75);
     margin: 1.3% 2%;
     padding: 4%;
@@ -263,6 +232,7 @@ button:active{
     transition: all 0.5s ease-out;
     color: #000000;
     box-shadow: 0 10px 10px -5px;
+    text-decoration: none;
 }
 .problock:hover{
     transform:scale(1.03,1.03);
@@ -271,9 +241,12 @@ button:active{
     box-shadow: 0 10px 10px -5px;
 }
 .proimage{
-    width: 50%;
+    width: 100%;
     overflow: hidden;
-    object-fit: contain;
+}
+.proimage img{
+    width: 100%;
+    object-fit: cover;
 }
 .protitle{
     font-size: 30px;
