--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,7 @@
     margin: 0;
 }
 body{
-    width: calc(100vw-7px);
+    background-color: #81D8D0;
 }
 body::-webkit-scrollbar {
     width: 7px;
@@ -25,9 +25,9 @@ body::-webkit-scrollbar-track {
     box-shadow: #bbbbbb;
     border-radius: 4px;
 }
+
 /*header*/
 header{
-    width: calc(100%-3vw);
     height: 8vh;
     padding: 0 1.5vw;
     position: sticky;
@@ -40,13 +40,19 @@ header{
     display: inline-flex;
     height: inherit;
     align-items: center;
+    justify-content: center;
+    max-width: 85%;
     margin: 0;
 }
 #shead img{
-    justify-content: center;
     height: 90%;
-    max-width: 75%;
     object-fit: contain;
+}
+#menu{
+    display: none;
+}
+#menu svg{
+    height: 80%;
 }
 nav{
     float: right;
@@ -54,13 +60,24 @@ nav{
     margin: 0;
     padding: 0;
 }
+nav ul{
+    height: inherit;
+    padding: 0;
+}
+nav ul li{
+    display: inline;
+    height: inherit;
+}
+#mobilenav{
+    display: none;
+}
 .navb{
     display: inline-flex;
     border: 0;
     color: #53a39b;
     text-decoration: none;
     cursor: pointer;
-    font-size: 23px;
+    font-size: 25px;
     width: 100px;
     height: inherit;
     justify-content: center;
@@ -73,18 +90,68 @@ nav{
     color: #ffffff;
     background-color: #2d726b;
 }
+@media only screen and (max-width: 1024px){
+    #shead{
+        max-width: 80%;
+        justify-content: flex-start;
+    }
+    #shead img{
+        max-width: 100%;
+    }
+    #menu{
+        float: right;
+        display: inline-flex;
+        border: 0;
+        color: #53a39b;
+        text-decoration: none;
+        cursor: pointer;
+        width: 10%;
+        height: inherit;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0.5vw;
+        transition: 0.3s;
+    }
+    #menu:hover{
+        border: 0;
+        color: #ffffff;
+        background-color: #005048;
+    }
+    nav{
+        display: none;
+    }
+    #mobilenav{
+        display: none;
+        position: fixed;
+        top: 8vh;
+        right: 0;
+        width: 0;
+        min-height: 93vh;
+        height: auto;
+        padding-left: 0;
+        background-image: linear-gradient(to right, #2d726d 0%, #2d726d 100%), linear-gradient(to right, rgba(0, 0, 0, 70%) 0%, rgba(0, 0, 0, 70%) 100%);
+        background-clip: content-box, padding-box;
+        transition: 0.3s;
+        list-style-type: none;
+    }
+    .navb{
+        width: 100%;
+        height: 8vh;
+        font-size: 30px;
+    }
+}
+
 /*main content*/
 main{
-    float: left;
-    width: 100%;
     overflow: hidden;
+    min-height: 85vh;
 }
 .pagehead{
     display: flex;
     width: 100%;
     height: 30vh;
     padding: 0.5vh 0;
-    background-image: url(/pictures/title_bg.png);
+    background-image: url(/pictures/title_bg.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -94,17 +161,19 @@ main{
     overflow: hidden;
 }
 .pagetitle{
+    text-align: center;
     font-size: 75px;
-    /*height: 50%;*/
 }
 .pagesubtitle{
     display: flex;
-    font-size: 50px;
     align-items: center;
     justify-content: center;
     font-size: 30px;
     overflow: hidden;
+    text-align: center;
     margin-bottom: 20px;
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 .pagesubtitle p{
     padding: 8px;
@@ -112,28 +181,107 @@ main{
     border-radius: 20px;
 }
 .content{
-    width: calc(100%-26vw);
-    padding: 0 13vw;
-    margin-bottom: 40px;
     overflow: hidden;
+    min-height: 120px;
+    background-color: rgba(255, 255, 255, 0.75);
+    margin: 1% 5vw 40px 5vw;
+    padding: 2%;
+    border-radius: 15px;
+    color: #000000;
+    box-shadow: 0 10px 10px -5px;
+    font-size: 20px;
 }
+.content h2{
+    margin: 1.5% 0;
+    font-size: 30px;
+}
+.content h3{
+    margin: 1.5% 0;
+    font-size: 25px;
+}
+.content p{
+    margin: 1% 0;
+    font-size: 20px;
+}
+@media only screen and (max-width: 600px){
+    .content p{
+        font-size: 17px;
+    }
+}
+hr{
+    background-color: #2d726b;
+    height: 3px;
+    margin: 1% 0%
+}
+
 /*footer*/
 footer{
-    width: 100%;
-    height: 10vh;
+    height: 7vh;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: #46ada3;
     overflow: hidden;
 }
 #siterights{
     color: #ffffff;
-    margin: 1px;
-    text-align: center;
+    padding: 0 0 0 2%;
+    text-align: left;
     font-size: 20px;
     display: inline;
+}
+#siterights a{
+    text-decoration: none;
+    color: #6cfccc;
+}
+#out-link-button{
+    margin: 2% 0%;
+    padding: 0 2% 0 0;
+    overflow: hidden;
+    display: inline-flex;
+    justify-content: right;
+}
+.outb{
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: 0;
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+    color: #ffffff;
+    fill:#ffffff;
+    transition: 0.3s;
+    text-decoration: none;
+    margin: 0 0.5vw;
+    overflow: visible;
+}
+.outb:hover{
+    fill: #005048;
+    color: #005048;
+}
+@media only screen and (max-width: 1024px){
+    footer{
+        display: block;
+        height: fit-content;
+        padding: 2vh 0;
+    }
+    #siterights{
+        color: #ffffff;
+        padding: 2% 0;
+        text-align: center;
+        font-size: 15px;
+        display: block;
+    }
+    #out-link-button{
+        margin: 2% 0%;
+        padding: 0;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+    }
 }
 
 /*other*/
