--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,12 @@
 /*announcement part*/
-#announcement .content .zhwb{
+#announcement .content p{
     font-size: 25px;
+    text-align: center;
 }
-#announcement .content .zhw{
-    font-size: 25px;
-}
-#announcement .content .enw2{
-    font-size: 25px;
+@media only screen and (max-width: 1024px){
+    #announcement .content p{
+        font-size: 20px;
+    }
 }
 
 /*webtime part*/
@@ -39,11 +39,16 @@
     #webtime #webtimetitle{
         display: none;
     }
+    #webtime tr{
+        height: fit-content;
+    }
     #webtime .time{
         display: table-row;
         text-align: left;
+        font-size: 20px;
     }
     #webtime .event{
         display: table-row;
+        font-size: 20px;
     }
 }
