--- a/styles/about.css
+++ b/styles/about.css
@@ -50,12 +50,12 @@
     object-fit: cover;
 }
 .title{
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
 }
 .description{
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
 }
 #projectitems{
     grid-template-columns: repeat(1,1fr);
@@ -63,6 +63,17 @@
 details{
     margin: 1%;
     font-size: 20px;
+}
+@media only screen and (max-width: 1024px){
+    .title{
+        font-size: 18px;
+    }
+    .description{
+        font-size: 15px;
+    }
+    details{
+        font-size: 15px;
+    }
 }
 details img{
     max-width: 100%;
@@ -113,11 +124,6 @@ form li{
     opacity: 0;
     width: auto;
 }
-@media only screen and (max-width: 768px){
-    .option{
-        display: block;
-    }
-}
 .optionw{
     display: inline-block;
     border: solid 1px #46ada3;
@@ -125,6 +131,7 @@ form li{
     cursor: pointer;
     transition: 0.3s;
     padding: 1%;
+    font-size: 20px;
 }
 .option:hover+.optionw{
     background-color: #46ada3;
@@ -160,6 +167,7 @@ textarea::-webkit-input-placeholder{
     justify-content: center;
 }
 button{
+    color: #000000;
     margin: 10px;
     border: solid 3px #46ada3;
     border-radius: 20px;
@@ -175,6 +183,33 @@ button:hover{
 }
 button:active{
     transform: scale(0.9);
+}
+@media only screen and (max-width: 768px){
+    .label{
+        font-size: 18px;
+    }
+    .text{
+        font-size: 15px;
+    }
+    .text::-webkit-input-placeholder{
+        font-size: 15px;
+    }
+    .option{
+        display: block;
+    }
+    .optionw{
+        font-size: 15px;
+    }
+    textarea{
+        font-size: 15px;
+    }
+    textarea::-webkit-input-placeholder{
+        font-size: 15px;
+    }
+    button{
+        font-size: 15px;
+        height: 40px;
+    }
 }
 
 /*project page*/
