--- a/styles/main.css
+++ b/styles/main.css
@@ -189,7 +189,6 @@ main{
     border-radius: 15px;
     color: #000000;
     box-shadow: 0 10px 10px -5px;
-    font-size: 20px;
 }
 .content h2{
     margin: 1.5% 0;
@@ -204,8 +203,23 @@ main{
     font-size: 20px;
 }
 @media only screen and (max-width: 600px){
+    .content{
+        min-height: fit-content;
+        margin: 1% 0 40px 0;
+        padding: 3%;
+        border-radius: 5px;
+        box-shadow: 0 0 0 0;
+    }
+    .content h2{
+        margin: 1.5% 0;
+        font-size: 25px;
+    }
+    .content h3{
+        margin: 1.5% 0;
+        font-size: 20px;
+    }
     .content p{
-        font-size: 17px;
+        font-size: 15px;
     }
 }
 hr{
