--- a/styles/post.css
+++ b/styles/post.css
@@ -18,11 +18,6 @@
 #back{
     overflow: hidden;
 }
-@media only screen and (max-width: 768px){
-    #backdiv{
-        display: none;
-    }
-}
 #postdetail #posttime{
     font-size: 30px;
     padding-left: 2%;
@@ -31,15 +26,16 @@
     font-size: 30px;
     padding-left: 2%;
 }
-#postdiv{
-    width: 100%;
-    min-height: 120px;
-    background-color: rgba(255, 255, 255, 0.75);
-    margin: 1% 2%;
-    padding: 2%;
-    border-radius: 15px;
-    overflow: hidden;
-    color: #000000;
-    box-shadow: 0 10px 10px -5px;
-    font-size: 20px;
+@media only screen and (max-width: 768px){
+    #backdiv{
+        display: none;
+    }
+    #postdetail #posttime{
+        font-size: 23px;
+        padding-left: 2%;
+    }
+    #postdetail #posttitle{
+        font-size: 23px;
+        padding-left: 2%;
+    }
 }
