--- a/styles/about.css
+++ b/styles/about.css
@@ -8,10 +8,11 @@
 .subnav button{
     color: #000000;
     margin: 10px;
+    padding: 0 1%;
     border: solid 3px #46ada3;
     border-radius: 5px;
     background-color: inherit;
-    width: 150px;
+    min-width: 150px;
     height: 50px;
     font-size: 20px;
 }
@@ -29,12 +30,14 @@
     gap: 7px;
     margin: 1%;
     grid-template-columns: repeat(3,1fr);
+    grid-auto-rows: 1fr;
 }
 .smallitems{
     display: grid;
     gap: 7px;
     margin: 1%;
     grid-template-columns: repeat(8,1fr);
+    grid-auto-rows: 1fr;
 }
 @media only screen and (min-width: 768px) and (max-width: 1368px){
     .items{
@@ -55,7 +58,7 @@
 .items .item{
     display: inline-flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     padding: 0.5em;
     word-spacing: normal;
@@ -63,7 +66,6 @@
     text-decoration: none;
     color: initial;
     transition: 0.5s;
-    height: fit-content;
 }
 .smallitems .item{
     display: inline-flex;
@@ -101,13 +103,12 @@
     text-align: center;
     margin: 0%;
 }
+.items .item .time{
+    color: #666666;
+}
 .smallitems .item .title{
     font-size: 20px;
     text-align: center;
-}
-#certificateitems .description{
-    color: #2d726b;
-    font-weight: 700;
 }
 @media only screen and (max-width: 1280px){
     .title{
